avoid page breaks inside sections

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -100,6 +100,14 @@ h3 {
       }
     }
   }
+
+  .challenges {
+    page-break-inside: avoid;
+  }
+
+  .additional-info-wrapper {
+    page-break-inside: avoid;
+  }
 }
 
 .flex-container {
